docs : 기능명세서 작성

--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,8 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+//2021.11.24추가
+tasks.withType(JavaCompile){
+    options.encoding = "UTF-8"
+}
